my fist and final commit for this flexbox

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 <body>
     <h1 class="heading">Puppies Galore!</h1>
     <!-- insert one div here -->
+    <div class="row">
+        <div class="col">
+            <img src="./images/1.jpg" alt="puppy">
+            <img src="./images/2.jpg" alt="puppy">
+            <img src="./images/1.jpg" alt="puppy">
+            <img src="./images/1.jpg" alt="puppy">
+            <img src="./images/1.jpg" alt="puppy">
+            <img src="./images/1.jpg" alt="puppy">
+
+        </div>
+        <div class="col">
+            <img src="./images/2.jpg" alt="puppy">
+            <img src="./images/2.jpg" alt="puppy">
+            <img src="./images/2.jpg" alt="puppy">
+            <img src="./images/2.jpg" alt="puppy">
+            <img src="./images/2.jpg" alt="puppy">
+            <img src="./images/2.jpg" alt="puppy">
+
+        </div>
+        <div class="col">
+            <img src="./images/1.jpg" alt="puppy">
+            <img src="./images/2.jpg" alt="puppy">
+            <img src="./images/3.jpg" alt="puppy">
+            <img src="./images/4.jpg" alt="puppy">
+            <img src="./images/5.jpg" alt="puppy">
+            <img src="./images/6.jpg" alt="puppy">
+
+        </div>
+
+    </div>
         <!-- give it 4 children divs -->
              <!-- each child div should have six images linking to the ones in the image folder, there will be repeats -->
 </body>
